# DODO

./: .copier-answers.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-config.json  .typos.toml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: _checks.yaml  ci.yaml  release-please.yaml
digitalocean_deployment_orchestrator/: main.py
docs/demo/cloud_config_templates/: app_server.yaml.jinja  postgres_server.yaml.jinja
docs/demo/env_blueprints/: _sample.py.txt
src/digitalocean_deployment_orchestrator/: _DO_types.py  __init__.py  check_service_health.py  list_droplet_IPs.py  main.py  types.py  types_DO.py  types_cloudflare.py  utils.py
src/digitalocean_deployment_orchestrator/deploy/: blue_green_deploy.py
src/digitalocean_deployment_orchestrator/deploy/nginx/: app.conf.template
src/digitalocean_deployment_orchestrator/infra/: apply.py  types.py  utils.py
tests/: conftest.py  test_check_service_health.py  test_digitalocean_deployment_orchestrator.py  test_list_droplet_IPs.py  test_main.py  test_utils.py
tests/deploy/: test_blue_green_deploy.py
tests/infra/: test_apply.py  test_utils.py
