# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "digitalocean-deployment-orchestrator"
version = "0.5.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "cloudflare>=4.3.1,<5.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "pydo>=0.21.0,<0.25.0",
    "structlog>=25.5.0,<26.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "coverage>=7.12.0,<8.0.0",
    "ipython>=9.8.0,<10.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-randomly>=4.0.1,<5.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]

[project.urls]
Repository = "https://github.com"

[tool.setuptools]
packages = ["digitalocean_deployment_orchestrator"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
markers = [
    "integration",
    "slow",
    "smoke",
    "unit",
]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/types.py",
    "*/types_DO.py",
    "noxfile.py",
    "*/tests/*",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if settings.debug",
]

[tool.coverage.run]
source = [
    "./digitalocean_deployment_orchestrator/",
]
omit = [
    "*/tests/*"
]

[tool.ruff]
exclude = [".pdbrc"]
indent-width = 4
line-length = 90
target-version = "py314"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"src/digitalocean_deployment_orchestrator/**.py" = [
    "S603", # <https://docs.astral.sh/ruff/rules/subprocess-without-shell-equals-true>
    "S607", # <https://docs.astral.sh/ruff/rules/start-process-with-partial-path>
]
"tests/**.py" = ["S"]
